All Configuration related things, Converter, Secret converter, priority

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,24 @@
-# Configuration file
-# key = value
+# Your configuration properties
+greeting.message = hello
+greeting.name = quarkus
+greeting.hidden.prize-amount=10
+greeting.hidden.recipients=Prem,Krish
+
+other.message = hello
+other.name = quarkus
+other.hidden.prize-amount=10
+other.hidden.recipients=Prem,Krish
+
+quarkus.http.port=9090
+%dev.quarkus.http.port=8181 
+%test.quarkus.http.port=8181 
+
+%dev.remote.host=localhost
+remote.host=quarkus.io
+callable.url=https://${remote.host}/
+%dev.application.server=localhost
+application.server=remotehost
+
+application.host=${HOST:${remote.host}}
+
+configuration.value.name=22
